# BMF

./: README.md  pyproject.toml
bmf/: utilities.py
bmf/classic/: grecond.py
bmf/neural/: binary_modules.py  models.py  ncf.py
bmf/notebooks/: data_preparation.ipynb  neural_experiments.ipynb  neural_experiments_2.ipynb
