[tool.poetry]
name = "bmf"
version = "0.1.0"
description = ""
authors = ["Ruslan <ruslan15-mol@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.26.4"
scipy = "^1.12.0"
torch = "^2.2.2"
jupyter = "^1.0.0"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
